; ModuleID = '/home/carl/AnghaBench/linux/drivers/usb/chipidea/extr_debug.c_ci_registers_show.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/usb/chipidea/extr_debug.c_ci_registers_show.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.seq_file = type { %struct.ci_hdrc* }
%struct.ci_hdrc = type { i64, i64 }

@EPERM = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [19 x i8] c"USBINTR reg: %08x\0A\00", align 1
@.str.1 = private unnamed_addr constant [18 x i8] c"USBSTS reg: %08x\0A\00", align 1
@OP_USBMODE = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [19 x i8] c"USBMODE reg: %08x\0A\00", align 1
@OP_USBCMD = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [18 x i8] c"USBCMD reg: %08x\0A\00", align 1
@OP_PORTSC = common dso_local global i32 0, align 4
@.str.4 = private unnamed_addr constant [18 x i8] c"PORTSC reg: %08x\0A\00", align 1
@.str.5 = private unnamed_addr constant [17 x i8] c"OTGSC reg: %08x\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.seq_file*, i8*)* @ci_registers_show to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ci_registers_show(%struct.seq_file* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.seq_file*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca %struct.ci_hdrc*, align 8
  %7 = alloca i32, align 4
  store %struct.seq_file* %0, %struct.seq_file** %4, align 8
  store i8* %1, i8** %5, align 8
  %8 = load %struct.seq_file*, %struct.seq_file** %4, align 8
  %9 = getelementptr inbounds %struct.seq_file, %struct.seq_file* %8, i32 0, i32 0
  %10 = load %struct.ci_hdrc*, %struct.ci_hdrc** %9, align 8
  store %struct.ci_hdrc* %10, %struct.ci_hdrc** %6, align 8
  %11 = load %struct.ci_hdrc*, %struct.ci_hdrc** %6, align 8
  %12 = icmp ne %struct.ci_hdrc* %11, null
  br i1 %12, label %13, label %18

13:                                               ; preds = %2
  %14 = load %struct.ci_hdrc*, %struct.ci_hdrc** %6, align 8
  %15 = getelementptr inbounds %struct.ci_hdrc, %struct.ci_hdrc* %14, i32 0, i32 1
  %16 = load i64, i64* %15, align 8
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %21

18:                                               ; preds = %13, %2
  %19 = load i32, i32* @EPERM, align 4
  %20 = sub nsw i32 0, %19
  store i32 %20, i32* %3, align 4
  br label %61

21:                                               ; preds = %13
  %22 = load %struct.ci_hdrc*, %struct.ci_hdrc** %6, align 8
  %23 = call i32 @hw_read_intr_enable(%struct.ci_hdrc* %22)
  store i32 %23, i32* %7, align 4
  %24 = load %struct.seq_file*, %struct.seq_file** %4, align 8
  %25 = load i32, i32* %7, align 4
  %26 = call i32 @seq_printf(%struct.seq_file* %24, i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i64 0, i64 0), i32 %25)
  %27 = load %struct.ci_hdrc*, %struct.ci_hdrc** %6, align 8
  %28 = call i32 @hw_read_intr_status(%struct.ci_hdrc* %27)
  store i32 %28, i32* %7, align 4
  %29 = load %struct.seq_file*, %struct.seq_file** %4, align 8
  %30 = load i32, i32* %7, align 4
  %31 = call i32 @seq_printf(%struct.seq_file* %29, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.1, i64 0, i64 0), i32 %30)
  %32 = load %struct.ci_hdrc*, %struct.ci_hdrc** %6, align 8
  %33 = load i32, i32* @OP_USBMODE, align 4
  %34 = call i32 @hw_read(%struct.ci_hdrc* %32, i32 %33, i32 -1)
  store i32 %34, i32* %7, align 4
  %35 = load %struct.seq_file*, %struct.seq_file** %4, align 8
  %36 = load i32, i32* %7, align 4
  %37 = call i32 @seq_printf(%struct.seq_file* %35, i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.2, i64 0, i64 0), i32 %36)
  %38 = load %struct.ci_hdrc*, %struct.ci_hdrc** %6, align 8
  %39 = load i32, i32* @OP_USBCMD, align 4
  %40 = call i32 @hw_read(%struct.ci_hdrc* %38, i32 %39, i32 -1)
  store i32 %40, i32* %7, align 4
  %41 = load %struct.seq_file*, %struct.seq_file** %4, align 8
  %42 = load i32, i32* %7, align 4
  %43 = call i32 @seq_printf(%struct.seq_file* %41, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.3, i64 0, i64 0), i32 %42)
  %44 = load %struct.ci_hdrc*, %struct.ci_hdrc** %6, align 8
  %45 = load i32, i32* @OP_PORTSC, align 4
  %46 = call i32 @hw_read(%struct.ci_hdrc* %44, i32 %45, i32 -1)
  store i32 %46, i32* %7, align 4
  %47 = load %struct.seq_file*, %struct.seq_file** %4, align 8
  %48 = load i32, i32* %7, align 4
  %49 = call i32 @seq_printf(%struct.seq_file* %47, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.4, i64 0, i64 0), i32 %48)
  %50 = load %struct.ci_hdrc*, %struct.ci_hdrc** %6, align 8
  %51 = getelementptr inbounds %struct.ci_hdrc, %struct.ci_hdrc* %50, i32 0, i32 0
  %52 = load i64, i64* %51, align 8
  %53 = icmp ne i64 %52, 0
  br i1 %53, label %54, label %60

54:                                               ; preds = %21
  %55 = load %struct.ci_hdrc*, %struct.ci_hdrc** %6, align 8
  %56 = call i32 @hw_read_otgsc(%struct.ci_hdrc* %55, i32 -1)
  store i32 %56, i32* %7, align 4
  %57 = load %struct.seq_file*, %struct.seq_file** %4, align 8
  %58 = load i32, i32* %7, align 4
  %59 = call i32 @seq_printf(%struct.seq_file* %57, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.5, i64 0, i64 0), i32 %58)
  br label %60

60:                                               ; preds = %54, %21
  store i32 0, i32* %3, align 4
  br label %61

61:                                               ; preds = %60, %18
  %62 = load i32, i32* %3, align 4
  ret i32 %62
}

declare dso_local i32 @hw_read_intr_enable(%struct.ci_hdrc*) #1

declare dso_local i32 @seq_printf(%struct.seq_file*, i8*, i32) #1

declare dso_local i32 @hw_read_intr_status(%struct.ci_hdrc*) #1

declare dso_local i32 @hw_read(%struct.ci_hdrc*, i32, i32) #1

declare dso_local i32 @hw_read_otgsc(%struct.ci_hdrc*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
